Fix: Hardened JWT Service to prevent cloud decoding crash